--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Generate SHA
+      id: generate_sha
+      run: |
+        SHA=$(echo $GITHUB_SHA | head -c7)
+        echo "sha=$SHA" >> $GITHUB_OUTPUT
+
     - name: Build docker image
-      run: docker build -t evertonfabianokoga/nlw-journey_api-go:latest .
+      run: docker build -t evertonfabianokoga/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }} .
