--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,13 @@ jobs:
         SHA=$(echo $GITHUB_SHA | head -c7)
         echo "sha=$SHA" >> $GITHUB_OUTPUT
 
+    - name: Login into the container registry
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Build docker image
-      run: docker build -t evertonfabianokoga/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }} .
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }} .
+
+    
