--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,11 @@ jobs:
     - name: Build docker image
       run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }} .
 
+    - name: Push image
+      run: |
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }}
+        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:latest
+        
+
     
