--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,14 +25,11 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build docker image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }} .
-
-    - name: Push image
-      run: |
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }}
-        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:latest
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:latest
-        
-
-    
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        push: true
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:${{ steps.generate_sha.outputs.sha }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/nlw-journey_api-go:latest
