--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -45,10 +45,12 @@ spec:
               secretKeyRef:
                 name: db-connection
                 key: db_host
+          ports:
+            - containerPort: 8080
           resources:
             requests:
-              cpu: 200m
-              memory: 256Mi
+              cpu: 100m
+              memory: 128Mi
             limits:
-              cpu: 300m
-              memory: 256Mi
+              cpu: 200m
+              memory: 128Mi
